--- a/_pages/members.html
+++ b/_pages/members.html
@@ -2,180 +2,108 @@
 layout: archive
 title: #"Our Members"
 permalink: /members/
-author_profile: false
+author_profile: true
 ---
 
+
 <style>
-* {
-  box-sizing: border-box;
+table, th, td {
+  border:0px solid black;
+  border-collapse: collapse;
 }
-
-/* Create three equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 10px;
+td {
+  text-align: center;
 }
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+th, td {
+  padding-top: 5px;
 }
 </style>
-</head>
+
 <body>
+<center><h1>Saint David's Society of Savannah</h1></center>
 
-<center><h1>Founding Members</h1></center>
+<center><h2>Founding Members</h2></center>
+<table style="width:100%">
+  <tr>
+    <td style="width:33.33%">x</td>
+    <td style="width:33.33%">x</td>
+    <td style="width:33.33%">x</td>
+  </tr>
+  <tr>
+    <td>x</td>
+    <td>x</td>
+    <td>x</td>
+  </tr>
+</table>
 
-<div class="row">
-  <div class="column" style="background-color:fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-</div>
+<center><h2>Class of 2015</h2></center>
+<table style="width:100%">
+  <tr>
+    <td style="width:33.33%">Hugh Lange Barnes</td>
+    <td style="width:33.33%">Edith Brown Dekle</td>
+    <td style="width:33.33%">Kyle Edward Eckman</td>
+  </tr>
+  <tr>
+    <td>Judith Grey Freeman</td>
+    <td>Phyllis G. Hardeman</td>
+    <td>Muriel Bunney Henry</td>
+  </tr>
+</table>
 
-<center><h1>Class of 2015</h1></center>
+<center><h2>Class of 2016</h2></center>
+<table style="width:100%">
+  <tr>
+    <td style="width:33.33%">Teresa Melton Coursey</td>
+    <td style="width:33.33%">Carolus Wood Daniel, Jr.</td>
+    <td style="width:33.33%">Amanda Jones Walker</td>
+  </tr>
+  <tr>
+    <td>Robert Lucas Missroon, III</td>
+    <td>Gerald Malcolm Edenfield</td>
+    <td>Sharon Carter Edenfield</td>
+  </tr>
+</table>
 
-<div class="row">
-  <div class="column" style="background-color:fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-</div>
+<center><h2>Class of 2017</h2></center>
+<table style="width:100%">
+  <tr>
+    <td style="width:33.33%">Teresa Melton Coursey</td>
+    <td style="width:33.33%">Carolus Wood Daniel, Jr.</td>
+    <td style="width:33.33%">Amanda Jones Walker</td>
+  </tr>
+  <tr>
+    <td>Robert Lucas Missroon, III</td>
+    <td>Gerald Malcolm Edenfield</td>
+    <td>Sharon Carter Edenfield</td>
+  </tr>
+</table>
 
-<center><h1>Class of 2016</h1></center>
+<center><h2>Class of 2018</h2></center>
+<table style="width:100%">
+  <tr>
+    <td style="width:50%">Daniel O'Leary Missroon</td>
+    <td style="width:50%">Victor Williams Smith, Jr.</td>
+  </tr>
+  <tr>
+    <td>Christopher Britton Thomas</td>
+    <td>Joseph Michael Tonning</td>
+  </tr>
+</table>
 
-<div class="row">
-  <div class="column" style="background-color:fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-</div>
+<center><h2>Class of 2019</h2></center>
+<table style="width:100%">
+  <tr>
+    <td style="width:50%">Deborah Jean Coursey</td>
+    <td style="width:50%">Grace Amethyst Eckmann</td>
+  </tr>
+</table>
 
-<center><h1>Class of 2017</h1></center>
-
-<div class="row">
-  <div class="column" style="background-color:fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-</div>
-
-<center><h1>Class of 2018</h1></center>
-
-<div class="row">
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-</div>
-
-<center><h1>Class of 2019</h1></center>
-
-<div class="row">
-  <div class="column" style="background-color:fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-</div>
-
-<center><h1>Class of 2020</h1></center>
-
-<div class="row">
-  <div class="column" style="background-color:fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-</div>  
-
-<center><h1>Class of 2022</h1></center>
-
-<div class="row">
-  <div class="column" style="background-color:fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-</div>
-
-<center><h1>Class of 2023</h1></center>
-
-<div class="row">
-  <div class="column" style="background-color:fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-</div>
-
-<center><h1>Class of 2024</h1></center>
-
-<div class="row">
-  <div class="column" style="background-color:fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-</div>
-
-<center><h1>Class of 2025</h1></center>
-
-<div class="row">
-  <div class="column" style="background-color:fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-  <div class="column" style="background-color:#fff;">
-    <center><p>test</p><p>test</p></center>
-  </div>
-</div>
+<center><h2>Class of 2020</h2></center>
+<table style="width:100%">
+  <tr>
+    <td style="width:50%">Charles Wesley Williams</td>
+    <td style="width:50%">Amy Sullivan Jones</td>
+  </tr>
+</table>
 
 </body>
