--- a/_pages/members.html
+++ b/_pages/members.html
@@ -37,7 +37,7 @@ th, td {
 </table>
 
 <center><h2>Class of 2015</h2></center>
-<table style="width:75%">
+<table style="width:75%" align="center">
   <tr>
     <td style="width:33.33%">Hugh Lange Barnes</td>
     <td style="width:33.33%">Edith Brown Dekle</td>
