--- a/_pages/members.html
+++ b/_pages/members.html
@@ -23,7 +23,7 @@ th, td {
 <center><h1>Saint David's Society of Savannah</h1></center>
 
 <center><h2>Founding Members</h2></center>
-<table style="width:100%">
+<table style="width:75%" align="center">
   <tr>
     <td style="width:33.33%">x</td>
     <td style="width:33.33%">x</td>
@@ -51,7 +51,7 @@ th, td {
 </table>
 
 <center><h2>Class of 2016</h2></center>
-<table style="width:100%">
+<table style="width:75%" align="center">
   <tr>
     <td style="width:33.33%">Teresa Melton Coursey</td>
     <td style="width:33.33%">Carolus Wood Daniel, Jr.</td>
@@ -65,21 +65,25 @@ th, td {
 </table>
 
 <center><h2>Class of 2017</h2></center>
-<table style="width:100%">
+<table style="width:75%" align="center">
   <tr>
-    <td style="width:33.33%">Teresa Melton Coursey</td>
-    <td style="width:33.33%">Carolus Wood Daniel, Jr.</td>
-    <td style="width:33.33%">Amanda Jones Walker</td>
+    <td colspan="2" style="width:33.33%">Jolly Cosmiano Bush</td>
+    <td colspan="2" style="width:33.33%">Andrew Pickens Calhoun</td>
+    <td colspan="2" style="width:33.33%">Catherine Courtnay Miller</td>
   </tr>
   <tr>
-    <td>Robert Lucas Missroon, III</td>
-    <td>Gerald Malcolm Edenfield</td>
-    <td>Sharon Carter Edenfield</td>
+    <td colspan="2">Brian Hughes McLaurin</td>
+    <td colspan="2">Robert Singleton Miller</td>
+    <td colspan="2">Thomas Robert Thomas</td>
+  </tr>
+  <tr>
+    <td colspan="3">James White</td>
+    <td colspan="3">Virginia Smith White</td>
   </tr>
 </table>
 
 <center><h2>Class of 2018</h2></center>
-<table style="width:100%">
+<table style="width:75%" align="center">
   <tr>
     <td style="width:50%">Daniel O'Leary Missroon</td>
     <td style="width:50%">Victor Williams Smith, Jr.</td>
@@ -91,7 +95,7 @@ th, td {
 </table>
 
 <center><h2>Class of 2019</h2></center>
-<table style="width:100%">
+<table style="width:75%" align="center">
   <tr>
     <td style="width:50%">Deborah Jean Coursey</td>
     <td style="width:50%">Grace Amethyst Eckmann</td>
@@ -99,11 +103,74 @@ th, td {
 </table>
 
 <center><h2>Class of 2020</h2></center>
-<table style="width:100%">
+<table style="width:75%" align="center">
   <tr>
     <td style="width:50%">Charles Wesley Williams</td>
     <td style="width:50%">Amy Sullivan Jones</td>
   </tr>
 </table>
 
+<center><h2>Class of 2022</h2></center>
+<table style="width:75%" align="center">
+  <tr>
+    <td style="width:33.33%">Rutledge Gunning Missroon</td>
+    <td style="width:33.33%">Lamar W. "Whit" Davis, III</td>
+    <td style="width:33.33%">Elizabeth McNeely Davis</td>
+  </tr>
+  <tr>
+    <td>Barbara Tonning Miller</td>
+    <td>Jenny Lind Gentry</td>
+    <td>Jennifer Lynn Rutherford</td>
+  </tr>
+  <tr>
+    <td>Lori Burkett Coelho</td>
+    <td>Amy Elizabeth Mayo</td>
+    <td>Juliet Ann Hardeman</td>
+  </tr>
+</table>
+
+<center><h2>Class of 2023</h2></center>
+<table style="width:75%" align="center">
+  <tr>
+    <td colspan="2" style="width:33.33%">Walter Perkins Degenhardt</td>
+    <td colspan="2" style="width:33.33%">Janet Miller Guerry</td>
+    <td colspan="2" style="width:33.33%">Josephine Elizabeth Mills</td>
+  </tr>
+  <tr>
+    <td colspan="2">Terri Walker Degenhardt</td>
+    <td colspan="2">Judy R. Williams</td>
+    <td colspan="2">Carolyn Allred Lord</td>
+  </tr>
+  <tr>
+    <td colspan="2">Jonah Riely Eckmann</td>
+    <td colspan="2">Charles Degenhardt, Jr.</td>
+    <td colspan="2">Rosemary G. Frame</td>
+  </tr>
+  <tr>
+    <td colspan="2">Pamela Lewis Miltiades</td>
+    <td colspan="2">O. Raymond Gaster</td>
+    <td colspan="2">Thomas Herbert Guerry, III</td>
+  </tr>
+  <tr>
+    <td colspan="3">Barbara Lea Davies</td>
+    <td colspan="3">Marcia Martin Thompson</td>
+  </tr>
+</table>
+
+<center><h2>Class of 2024</h2></center>
+<table style="width:75%" align="center">
+  <tr>
+    <td style="width:33.33%">Ewell Samuel Byrd</td>
+    <td style="width:33.33%">William Emmett Copeland</td>
+    <td style="width:33.33%">William Sebastian Hancock</td>
+  </tr>
+</table>
+
+<center><h2>Class of 2025</h2></center>
+<table style="width:75%" align="center">
+  <tr>
+    <td style="width:100%">Annelie Chris Hancock</td>
+  </tr>
+</table>
+  
 </body>
