Update and rename Gallery.html to gallery.html

--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -12,7 +12,7 @@ table, th, td {
   border:0px solid black;
   border-collapse: collapse;
 }
-td {
+th, td {
   text-align: center;
 }
 th, td {
@@ -42,7 +42,7 @@ Event Photos<br>(Coming soon)</a></td>
   <tr>
     <td><a href="" target="_blank"><img src=""><br>
 Event Program<br>(Coming soon)</a></td>
-    <td><a href="https://sway.office.com/QJcgVEq3bIREKGsk?ref=Link" target="_blank"><img src=""><br>
+    <td><a href="https://sway.office.com/QJcgVEq3bIREKGsk?ref=Link" target="_blank"><img src="/images/tb23.png"><br>
 Event Photos</a></td>
   </tr>
   <tr>
@@ -51,7 +51,7 @@ Event Photos</a></td>
   <tr>
     <td><a href="" target="_blank"><img src=""><br>
 Event Program<br>(Coming Soon)</a></td>
-    <td><a href="https://sway.office.com/p3Whw7KPeR3i5Azq?ref=Link" target="_blank"><img src=""><br>
+    <td><a href="https://sway.office.com/p3Whw7KPeR3i5Azq?ref=Link" target="_blank"><img src="/images/tb22.png"><br>
 Event Photos</a></td>
   </tr>
   <tr>
@@ -60,7 +60,7 @@ Event Photos</a></td>
   <tr>
     <td><a href="" target="_blank"><img src=""><br>
 Event Program<br>(Coming Soon)</a></td>
-    <td><a href="https://sway.office.com/kzME7z0RN4zT2ZbN?ref=Link" target="_blank"><img src=""><br>
+    <td><a href="https://sway.office.com/kzME7z0RN4zT2ZbN?ref=Link" target="_blank"><img src="/images/tb19.png"><br>
 Event Photos</a></td>
   </tr>
   <tr>
@@ -69,7 +69,7 @@ Event Photos</a></td>
   <tr>
     <td><a href="" target="_blank"><img src=""><br>
 Event Program<br>(Coming Soon)</a></td>
-    <td><a href="https://sway.com/n4ZpyJug3iogoV6S?ref=Link" target="_blank"><img src=""><br>
+    <td><a href="https://sway.com/n4ZpyJug3iogoV6S?ref=Link" target="_blank"><img src="/images/tb18.png"><br>
 Event Photos</a></td>
   </tr>
     <tr>
@@ -78,7 +78,7 @@ Event Photos</a></td>
   <tr>
     <td><a href="" target="_blank"><img src=""><br>
 Event Program<br>(Coming Soon)</a></td>
-    <td><a href="https://youtu.be/5uClmiawVrQ" target="_blank"><img src=""><br>
+    <td><a href="https://youtu.be/5uClmiawVrQ" target="_blank"><img src="/images/tb17.png"><br>
 Event Video</a></td>
   </tr>
    <tr>
@@ -87,7 +87,7 @@ Event Video</a></td>
   <tr>
     <td><a href="" target="_blank"><img src=""><br>
 Event Program<br>(Coming Soon)</a></td>
-    <td><a href="https://www.facebook.com/media/set/?set=a.625750684191899.1073741831.472571172843185&type=3" target="_blank"><img src=""><br>
+    <td><a href="https://www.facebook.com/media/set/?set=a.625750684191899.1073741831.472571172843185&type=3" target="_blank"><img src="/images/tb14.png"><br>
 Event Photos</a></td>
   </tr>
 </table>
@@ -99,14 +99,14 @@ Event Photos</a></td>
     <th>2022</th>
   </tr>
   <tr>
-    <td> <a href="https://www.facebook.com/media/set/?set=a.4658486087584985&type=3" target="_blank"><img src="" width="200"><br>
+    <td> <a href="https://www.facebook.com/media/set/?set=a.4658486087584985&type=3" target="_blank"><img src="/images/or22.png" width="200"><br>
 Event Photos</a> </td>
   </tr>
   <tr>
     <th>2015</th>
   </tr>
   <tr>
-    <td> <a href="https://www.facebook.com/media/set/?set=a.631457093621258.1073741834.472571172843185&type=3" target="_blank"><img src="" width="200"><br>
+    <td> <a href="https://www.facebook.com/media/set/?set=a.631457093621258.1073741834.472571172843185&type=3" target="_blank"><img src="/images/or15.png" width="200"><br>
 Event Photos</a> </td>
   </tr>
 </table>
