--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -31,7 +31,7 @@ th, td {
     <th colspan="2">2025</th>
   </tr>
   <tr>
-    <td style="width:50%"> <a href="https://whancock6.github.io/sdss2/files/Tudor-Ball-Program-Orig-08-25-2025.pdf" target="_blank"><img src="https://stdavidsavannah.com/2025-Tudor-Ball/Cover.png" width="200"><br>
+    <td style="width:50%"> <a href="https://whancock6.github.io/sdss2/files/Tudor-Ball-Program-Orig-08-25-2025.pdf" download><img src="https://stdavidsavannah.com/2025-Tudor-Ball/Cover.png" width="200"><br>
 Event Program</a> </td>
     <td style="width:50%"><a href="" target="_blank"><img src=""><br>
 Event Photos<br>(Coming soon)</a></td>
@@ -40,7 +40,7 @@ Event Photos<br>(Coming soon)</a></td>
     <th colspan="2">2024</th>
   </tr>
   <tr>
-    <td style="width:50%"> <a href="" target="_blank"><img src="" width="200"><br>
+    <td style="width:50%"> <a href="" target="_blank"><img src="https://whancock6.github.io/sdss2/images/tb24.png" width="200"><br>
 Event Program</a> </td>
     <td style="width:50%"><a href="https://sway.cloud.microsoft/FA9giQDZ0iUZ5iJm?ref=Link" target="_blank"><img src="https://whancock6.github.io/sdss2/images/tb24.png"><br>
 Event Photos<br>(Coming soon)</a></td>
