--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -31,25 +31,25 @@ th, td {
     <th colspan="2">2025</th>
   </tr>
   <tr>
-    <td style="width:50%"> <a href="https://whancock6.github.io/sdss2/files/2025program.pdf" download><img src="https://stdavidsavannah.com/2025-Tudor-Ball/Cover.png" width="200"><br>
+    <td style="width:50%"> <a href="https://whancock6.github.io/sdss2/files/2025program.pdf" download><img src="https://stdavidsavannah.com/2025-Tudor-Ball/Cover.png"><br>
 Event Program</a> </td>
-    <td style="width:50%"><a href="" target="_blank"><img src=""><br>
+    <td style="width:50%"><a href="" target="_blank"><img src="https://whancock6.github.io/sdss2/images/placeholder.png"><br>
 Event Photos<br>(Coming soon)</a></td>
   </tr>
   <tr>
     <th colspan="2">2024</th>
   </tr>
   <tr>
-    <td style="width:50%"> <a href="" target="_blank"><img src="https://whancock6.github.io/sdss2/images/tb24.png"><br>
+    <td style="width:50%"> <a href="" target="_blank"><img src="https://whancock6.github.io/sdss2/images/placeholder.png"><br>
 Event Program</a> </td>
     <td style="width:50%"><a href="https://sway.cloud.microsoft/FA9giQDZ0iUZ5iJm?ref=Link" target="_blank"><img src="https://whancock6.github.io/sdss2/images/tb24.png"><br>
-Event Photos<br>(Coming soon)</a></td>
+Event Photos</a></td>
   </tr>
   <tr>
     <th colspan="2"><br>2023</th>
   </tr>
   <tr>
-    <td><a href="" target="_blank"><img src=""><br>
+    <td><a href="" target="_blank"><img src="https://whancock6.github.io/sdss2/images/placeholder.png"><br>
 Event Program<br>(Coming soon)</a></td>
     <td><a href="https://sway.office.com/QJcgVEq3bIREKGsk?ref=Link" target="_blank"><img src="https://whancock6.github.io/sdss2/images/tb23.png"><br>
 Event Photos</a></td>
@@ -58,7 +58,7 @@ Event Photos</a></td>
     <th colspan="2"><br>2022</th>
   </tr>
   <tr>
-    <td><a href="" target="_blank"><img src=""><br>
+    <td><a href="" target="_blank"><img src="https://whancock6.github.io/sdss2/images/placeholder.png"><br>
 Event Program<br>(Coming Soon)</a></td>
     <td><a href="https://sway.office.com/p3Whw7KPeR3i5Azq?ref=Link" target="_blank"><img src="https://whancock6.github.io/sdss2/images/tb22.png"><br>
 Event Photos</a></td>
@@ -67,7 +67,7 @@ Event Photos</a></td>
     <th colspan="2"><br>2019</th>
   </tr>
   <tr>
-    <td><a href="" target="_blank"><img src=""><br>
+    <td><a href="" target="_blank"><img src="https://whancock6.github.io/sdss2/images/placeholder.png"><br>
 Event Program<br>(Coming Soon)</a></td>
     <td><a href="https://sway.office.com/kzME7z0RN4zT2ZbN?ref=Link" target="_blank"><img src="https://whancock6.github.io/sdss2/images/tb19.png"><br>
 Event Photos</a></td>
@@ -76,7 +76,7 @@ Event Photos</a></td>
     <th colspan="2"><br>2018</th>
   </tr>
   <tr>
-    <td><a href="" target="_blank"><img src=""><br>
+    <td><a href="" target="_blank"><img src="https://whancock6.github.io/sdss2/images/placeholder.png"><br>
 Event Program<br>(Coming Soon)</a></td>
     <td><a href="https://sway.com/n4ZpyJug3iogoV6S?ref=Link" target="_blank"><img src="https://whancock6.github.io/sdss2/images/tb18.png"><br>
 Event Photos</a></td>
@@ -85,7 +85,7 @@ Event Photos</a></td>
     <th colspan="2"><br>2017</th>
   </tr>
   <tr>
-    <td><a href="" target="_blank"><img src=""><br>
+    <td><a href="" target="_blank"><img src="https://whancock6.github.io/sdss2/images/placeholder.png"><br>
 Event Program<br>(Coming Soon)</a></td>
     <td><a href="https://youtu.be/5uClmiawVrQ" target="_blank"><img src="https://whancock6.github.io/sdss2/images/tb17.png"><br>
 Event Video</a></td>
@@ -94,7 +94,7 @@ Event Video</a></td>
     <th colspan="2"><br>2014</th>
   </tr>
   <tr>
-    <td><a href="" target="_blank"><img src=""><br>
+    <td><a href="" target="_blank"><img src="https://whancock6.github.io/sdss2/images/placeholder.png"><br>
 Event Program<br>(Coming Soon)</a></td>
     <td><a href="https://www.facebook.com/media/set/?set=a.625750684191899.1073741831.472571172843185&type=3" target="_blank"><img src="https://whancock6.github.io/sdss2/images/tb14.png"><br>
 Event Photos</a></td>
@@ -108,14 +108,14 @@ Event Photos</a></td>
     <th>2022</th>
   </tr>
   <tr>
-    <td> <a href="https://www.facebook.com/media/set/?set=a.4658486087584985&type=3" target="_blank"><img src="https://whancock6.github.io/sdss2/images/or22.png" width="200"><br>
+    <td> <a href="https://www.facebook.com/media/set/?set=a.4658486087584985&type=3" target="_blank"><img src="https://whancock6.github.io/sdss2/images/or22.png"><br>
 Event Photos</a> </td>
   </tr>
   <tr>
     <th>2015</th>
   </tr>
   <tr>
-    <td> <a href="https://www.facebook.com/media/set/?set=a.631457093621258.1073741834.472571172843185&type=3" target="_blank"><img src="https://whancock6.github.io/sdss2/images/or15.png" width="200"><br>
+    <td> <a href="https://www.facebook.com/media/set/?set=a.631457093621258.1073741834.472571172843185&type=3" target="_blank"><img src="https://whancock6.github.io/sdss2/images/or15.png"><br>
 Event Photos</a> </td>
   </tr>
 </table>
