--- a/_pages/members.html
+++ b/_pages/members.html
@@ -20,7 +20,7 @@ th, td {
 </style>
 
 <body>
-<center><h1>Saint David's Society of Savannah</h1></center>
+<center><h1>Roster of the Society</h1></center>
 
 <center><h2>Founding Members</h2></center>
 <table style="width:75%" align="center">
