--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,14 +1,19 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
+title: #"Officers"
+permalink: /officers/
 author_profile: true
 ---
 
-{% include base_path %}
+<head>
+<style>
+</style>
+</head>
 
-
-{% for post in site.portfolio %}
-  {% include archive-single.html %}
-{% endfor %}
-
+<body>
+<center>
+<h1>Officers of the Society</h1>
+<hr style="border: 10px double #003300;" width="50%" />
+<h2>Regents</h2>
+</center>
+</body>  
