--- a/_pages/heritage.html
+++ b/_pages/heritage.html
@@ -6,45 +6,26 @@ author_profile: true
 ---
 
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-* {
-  box-sizing: border-box;
-}
-
-/* Create three equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
 </style>
 </head>
 <body>
 
-<h2>Three Equal Columns</h2>
-
-<div class="row">
-  <div class="column" style="background-color:#aaa;">
-    <h2>Column 1</h2>
-    <p>Some text..</p>
-  </div>
-  <div class="column" style="background-color:#bbb;">
-    <h2>Column 2</h2>
-    <p>Some text..</p>
-  </div>
-  <div class="column" style="background-color:#ccc;">
-    <h2>Column 3</h2>
-    <p>Some text..</p>
-  </div>
-</div>
+<h1>Wales, Saint David, and the Society</h1>
+<hr />
+<h2>Wales</h2>
+<h3>Antiquity</h3>
+<h3>Medival Wales</h3>
+<h3>Modern Wales</h3>
+<h3>Welsh Symbols</h3>
+<hr /> 
+<h2>Saint David</h2>
+<h3>Patron Saint of Wales</h3>
+<h3>Symbols of Saint David</h3>
+<h3>Saint David's Day</h3>
+<hr />
+<h2>The Savannah Society</h2>
+<h3>Origin</h3>
+<h3>Events</h3>
 
 </body>
