--- a/_pages/learn.html
+++ b/_pages/learn.html
@@ -7,9 +7,9 @@ author_profile: true
 
 <head>
 <style>
-a:link, a:visited {
+.button {
   border: none;
-  border-radius: 15px;
+  border-radius: 25px;
   background-color: #006600;
   color: white;
   padding: 15px 32px;
@@ -19,11 +19,11 @@ a:link, a:visited {
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-  width: 100px;
+  width: 300px;
 }
 
-a:hover, a:active {
-  background-color: #003300;
+.button:hover {
+    background-color: #003300;
 }
 </style>
 </head>
@@ -31,13 +31,13 @@ a:hover, a:active {
 <center>
 <h1>Learning Center</h1>
 <p><em>Internal Website Links</em></p>
-<a href="https://whancock6.github.io/sdss2/history/" target="_self">Welsh History</a><br>
-<a href="https://whancock6.github.io/sdss2/culture/" target="_self">Welsh Culture</a><br>
-<a href="https://whancock6.github.io/sdss2/Saint-David/" target="_self">Saint David</a><br>
-<a href="https://whancock6.github.io/sdss2/the-society/" target="_self">The Society</a><br>
+<a href="https://whancock6.github.io/sdss2/history/" class="button" target="_self">Welsh History</a><br>
+<a href="https://whancock6.github.io/sdss2/culture/" class="button" target="_self">Welsh Culture</a><br>
+<a href="https://whancock6.github.io/sdss2/Saint-David/" class="button" target="_self">Saint David</a><br>
+<a href="https://whancock6.github.io/sdss2/the-society/" class="button" target="_self">The Society</a><br>
 <p><em>External Links</em></p>
-<a href="https://www.historic-uk.com/CultureUK/Traditional-Welsh-Food/" target="_blank">Welsh Recipes</a><br>
-<a href="https://recipes.fandom.com/wiki/Category:Welsh_Desserts" target="_blank">Welsh Deserts</a><br>
-<a href="https://www.wales.com/about/history-and-heritage/welsh-traditions-myths-and-legends" target="_blank">Myths and Legends</a><br>
+<a href="https://www.historic-uk.com/CultureUK/Traditional-Welsh-Food/" class="button" target="_blank">Welsh Recipes</a><br>
+<a href="https://recipes.fandom.com/wiki/Category:Welsh_Desserts" class="button" target="_blank">Welsh Deserts</a><br>
+<a href="https://www.wales.com/about/history-and-heritage/welsh-traditions-myths-and-legends" class="button" target="_blank">Myths and Legends</a><br>
 </center>
 </body>
