--- a/_pages/learn.html
+++ b/_pages/learn.html
@@ -30,12 +30,12 @@ author_profile: true
 <body>
 <center>
 <h1>Learning Center</h1>
-<p><em>Internal Website Links</em></p>
+<p><em>**Internal Website Links</em></p>
 <a href="https://whancock6.github.io/sdss2/history/" class="button" target="_self">Welsh History</a><br>
 <a href="https://whancock6.github.io/sdss2/culture/" class="button" target="_self">Welsh Culture</a><br>
 <a href="https://whancock6.github.io/sdss2/Saint-David/" class="button" target="_self">Saint David</a><br>
 <a href="https://whancock6.github.io/sdss2/the-society/" class="button" target="_self">The Society</a><br>
-<p><em>External Links</em></p>
+<p><em>**External Links</em></p>
 <a href="https://www.historic-uk.com/CultureUK/Traditional-Welsh-Food/" class="button" target="_blank">Welsh Recipes</a><br>
 <a href="https://recipes.fandom.com/wiki/Category:Welsh_Desserts" class="button" target="_blank">Welsh Deserts</a><br>
 <a href="https://www.wales.com/about/history-and-heritage/welsh-traditions-myths-and-legends" class="button" target="_blank">Myths and Legends</a><br>
