--- a/_pages/members.html
+++ b/_pages/members.html
@@ -22,7 +22,7 @@ th, td {
 <body>
 <center><h1>Roster of the Society</h1></center>
 
-<center><h2>Founding Members</h2></center>
+<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:50px"><br><h2>Founding Members</h2></center>
 <table style="width:75%" align="center">
   <tr>
     <td style="width:33.33%">x</td>
