--- a/_pages/members.html
+++ b/_pages/members.html
@@ -21,8 +21,9 @@ th, td {
 
 <body>
 <center><h1>Roster of the Society</h1></center>
-
-<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:50px"><br><h2>Founding Members</h2></center>
+<br>
+<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px"></center>center>
+<center><h2>Founding Members</h2></center>
 <table style="width:75%" align="center">
   <tr>
     <td style="width:33.33%">x</td>
