--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -28,10 +28,10 @@ th, td {
 
 <table style="width:75%" align="center">
   <tr>
-    <th colspan="2">2025</th>
+    <th colspan="2"><h3>2025</h3></th>
   </tr>
   <tr>
-    <td style="width:50%"> <a href="https://whancock6.github.io/sdss2/files/2025program.pdf" download><img src="https://stdavidsavannah.com/2025-Tudor-Ball/Cover.png" style="width:350px"><br>
+    <td style="width:50%"> <a href="https://whancock6.github.io/sdss2/files/2025program.pdf" target="_blank"><img src="https://stdavidsavannah.com/2025-Tudor-Ball/Cover.png" style="width:350px"><br>
 Event Program</a> </td>
     <td style="width:50%"><a href="" target="_blank"><img src="https://whancock6.github.io/sdss2/images/placeholder.png" style="width:350px"><br>
 Event Photos<br>(Coming soon)</a></td>
