--- a/_pages/members.html
+++ b/_pages/members.html
@@ -22,7 +22,7 @@ th, td {
 <body>
 <center><h1>Roster of the Society</h1></center>
 <br>
-<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px"></center>center>
+<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px"></center>
 <center><h2>Founding Members</h2></center>
 <table style="width:75%" align="center">
   <tr>
