--- a/_pages/members.html
+++ b/_pages/members.html
@@ -22,7 +22,7 @@ th, td {
 <body>
 <center><h1>Roster of the Society</h1></center>
 <br>
-<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px;" style="vertical-align: bottom;"></center>
+<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px;"></center>
 <center><h2>Founding Members</h2></center>
 <table style="width:75%" align="center">
   <tr>
@@ -37,6 +37,7 @@ th, td {
   </tr>
 </table>
 
+<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px;"></center>
 <center><h2>Class of 2015</h2></center>
 <table style="width:75%" align="center">
   <tr>
@@ -51,6 +52,7 @@ th, td {
   </tr>
 </table>
 
+<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px;"></center>
 <center><h2>Class of 2016</h2></center>
 <table style="width:75%" align="center">
   <tr>
@@ -65,6 +67,7 @@ th, td {
   </tr>
 </table>
 
+<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px;"></center>
 <center><h2>Class of 2017</h2></center>
 <table style="width:75%" align="center">
   <tr>
@@ -83,6 +86,7 @@ th, td {
   </tr>
 </table>
 
+<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px;"></center>
 <center><h2>Class of 2018</h2></center>
 <table style="width:75%" align="center">
   <tr>
@@ -95,6 +99,7 @@ th, td {
   </tr>
 </table>
 
+<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px;"></center>
 <center><h2>Class of 2019</h2></center>
 <table style="width:75%" align="center">
   <tr>
@@ -103,6 +108,7 @@ th, td {
   </tr>
 </table>
 
+<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px;"></center>
 <center><h2>Class of 2020</h2></center>
 <table style="width:75%" align="center">
   <tr>
@@ -111,6 +117,7 @@ th, td {
   </tr>
 </table>
 
+<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px;"></center>
 <center><h2>Class of 2022</h2></center>
 <table style="width:75%" align="center">
   <tr>
@@ -130,6 +137,7 @@ th, td {
   </tr>
 </table>
 
+<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px;"></center>
 <center><h2>Class of 2023</h2></center>
 <table style="width:75%" align="center">
   <tr>
@@ -158,6 +166,7 @@ th, td {
   </tr>
 </table>
 
+<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px;"></center>
 <center><h2>Class of 2024</h2></center>
 <table style="width:75%" align="center">
   <tr>
@@ -167,6 +176,7 @@ th, td {
   </tr>
 </table>
 
+<center><img src="https://whancock6.github.io/sdss2/images/knot.png" style="width:30px;"></center>
 <center><h2>Class of 2025</h2></center>
 <table style="width:75%" align="center">
   <tr>
