--- a/_pages/learn.html
+++ b/_pages/learn.html
@@ -16,7 +16,7 @@ author_profile: true
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 24px;
+  font-size: 20px;
   margin: 4px 2px;
   cursor: pointer;
   width: 300px;
@@ -35,6 +35,7 @@ author_profile: true
 <a href="https://whancock6.github.io/sdss2/culture/" class="button" target="_self">Welsh Culture</a><br>
 <a href="https://whancock6.github.io/sdss2/Saint-David/" class="button" target="_self">Saint David</a><br>
 <a href="https://whancock6.github.io/sdss2/the-society/" class="button" target="_self">The Society</a><br>
+<a href="https://whancock6.github.io/sdss2/symbols/" class="button" target="_self">Society Symbols</a><br>
 <p><em>**External Links</em></p>
 <a href="https://www.historic-uk.com/CultureUK/Traditional-Welsh-Food/" class="button" target="_blank">Welsh Recipes</a><br>
 <a href="https://recipes.fandom.com/wiki/Category:Welsh_Desserts" class="button" target="_blank">Welsh Deserts</a><br>
