--- a/_pages/learn.html
+++ b/_pages/learn.html
@@ -16,7 +16,7 @@ author_profile: true
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 20px;
+  font-size: 18px;
   margin: 4px 2px;
   cursor: pointer;
   width: 300px;
@@ -24,6 +24,10 @@ author_profile: true
 
 .button:hover {
     background-color: #003300;
+}
+
+a {
+  text-decoration: none;
 }
 </style>
 </head>
