--- a/_pages/learn.html
+++ b/_pages/learn.html
@@ -36,21 +36,17 @@ a {
   Whether you are discovering your Welsh heritage for the first time or deepening your knowledge, 
   these resources will guide you through centuries of stories, symbols, and celebrations.</p>
 <br>
-<p>Our members have prepared the following synopses as an introduction to the subjects:</p>
 <center>
+<p>Learn about Wales:</p>
 <a href="https://whancock6.github.io/sdss2/history/" class="button" target="_self">Welsh History</a><br>
 <a href="https://whancock6.github.io/sdss2/culture/" class="button" target="_self">Welsh Culture</a><br>
 <a href="https://whancock6.github.io/sdss2/Saint-David/" class="button" target="_self">Saint David</a><br>
 <br>
-</center>
 <p>Learn about the Saint David's Society of Savannah:</p>
-<center>
 <a href="https://whancock6.github.io/sdss2/the-society/" class="button" target="_self">The Society</a><br>
 <a href="https://whancock6.github.io/sdss2/symbols/" class="button" target="_self">Society Symbols</a><br>
 <br>
-</center>
-<p>While not prepared by us, these resources provide additional insight into Welsh traditions, food, folklore, and heritage:</p>
-<center>
+<p>Additional external resources:</p>
 <a href="https://www.historic-uk.com/CultureUK/Traditional-Welsh-Food/" class="button" target="_blank">Welsh Recipes</a><br>
 <a href="https://recipes.fandom.com/wiki/Category:Welsh_Desserts" class="button" target="_blank">Welsh Deserts</a><br>
 <a href="https://www.wales.com/about/history-and-heritage/welsh-traditions-myths-and-legends" class="button" target="_blank">Myths and Legends</a><br>
