--- a/_pages/gallery.html
+++ b/_pages/gallery.html
@@ -12,10 +12,11 @@ table, th, td {
   border:0px solid black;
   border-collapse: collapse;
 }
-th, td {
-  text-align: center;
+th {
+  font-size: 24px;
 }
 th, td {
+  text-align: center;
   padding-top: 5px;
 }
 </style>
